# RevenuecatShipyard

./: README.md  app.json  babel.config.js  index.share.js  package-lock.json  package.json
.claude/: CLAUDE.md  DESIGN_SYSTEM.md  UI_STANDARDS.md  recipe-app-prd.md  settings.local.json
app/: _layout.tsx  edit-profile.tsx  groceries.tsx  index.tsx  notifications.tsx  suggested-users.tsx
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_extraction.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  routes.py
backend/app/schemas/: __init__.py  extraction.py
backend/app/services/: __init__.py  extraction_pipeline.py  recipe_populator.py
backend/app/services/extractors/: __init__.py  audio_extractor.py  base.py  metadata_extractor.py  vision_extractor.py  website_extractor.py
constants/: copy.ts  onboarding.ts  theme.ts  voiceCommands.ts
context/: AddModalContext.tsx  RecipePickerContext.tsx  ShareIntentContext.tsx
convex/: cookbooks.ts  discover.ts  discoverFeed.ts  discoverFeedActions.ts  follows.ts  groceryList.ts  groceryListActions.ts  mealPlan.ts  mealPlanGeneration.ts  pantry.ts  postComments.ts  postLikes.ts  posts.ts  recipes.ts  savedPosts.ts  savedRecipes.ts  schema.ts  users.ts
hooks/: useBackgroundExtraction.ts  useClipboardDetection.ts  useCookbookCacheSync.ts  useModalAnimation.ts  usePendingShareImports.ts  usePostImageUpload.ts  useProfileImageUpload.ts  useRecipeExtraction.ts  useShareHandler.ts  useSubscription.ts  useVoiceAssistant.ts  useWakeWord.ts
ios/: Podfile
(+137 files in other folders)
